2010-05-31  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: If there's a reset event, we need to either
	  select the old item (if it exists) or the CurrentItem of the
	  ICV if we have an ICV now.

2010-05-26  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: If we get a collection reset event, just
	  attempt to reselect the current selection.

2010-05-25  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs:
	* Selection.cs: Update the implementation of
	  Selector.SelectedItems to pass more of drt 232. Basically we
	  need to keep two copies of the list, one which is publicly
	  accessible by the user and one which is our private 'master'
	  list. We listen for changes to the public one and then
	  mirror them in the master list if they're valid. The public
	  list is always synced to the master one after any
	  modifications to the selection so that if the user does
	  something mad, we can revert that.

2010-05-24  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Fix drt cs2!

2010-05-24  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Call base.OnItemsSourceChanged first instead of
	  last. Otherwise the 'Items' list will be empty which will
	  cause any calls to Selection.Select to fail.

2010-05-24  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs:
	* Selection.cs: Be consistent with how we deal with the case
	  where the SelectedValueWalker is null so that everywhere
	  uses the same logic. Fixes more of cs2.

2010-05-24  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs:
	* Selection.cs: Fix more of drt cs2.

2010-05-21  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs: Add support for the new SelectedValue and
	  SelectedValuePath properties.

	* Selection.cs: Keep the new SelectedValue property in sync
	  aswell.

2010-05-21  Alan McGovern  <amcgovern@novell.com>

	* Selector.cs:
	* Selection.cs: Merge two methods which handle selection
	  changes in Selector.cs to (hopefully) simplify the code a
	  bit.
