@@ -1,5 +1,10 @@
 2010-05-31  Alan McGovern  <amcgovern@novell.com>
 
+	* System.Windows.Controls/ListBoxTest.cs: Add some more tests
+	  for Selector.IsSynchronizedWithCurrent
+
+2010-05-31  Alan McGovern  <amcgovern@novell.com>
+
 	* System.Windows.Controls/ListBoxTest.cs:
 	* System.Windows.Data/CollectionViewGroupTest.cs:
 	* System.Windows.Data/CollectionViewSourceTest.cs:
